# midiendpoints

./: .build-tools.cson  .gcc-flags.json  .gitignore  .gitmodules  CMakeLists.txt  midiendpoints.sublime-project
cmake/Modules/: FindAsio.cmake  FindB64.cmake  FindBSF.cmake  FindJack.cmake  FindJson.cmake  FindLog4cxx.cmake  FindMosquitto.cmake  FindPaho.cmake  FindPahoCpp.cmake  FindRtMidi.cmake  UseAsio.cmake
common/: CMakeLists.txt
common/include/: MidiEndpointCommon.h
lib/: CMakeLists.txt  json.install  rtmidi_2.1.0.install
lib/bsf/: .gitignore  Doxyfile
lib/bsf/cmake/Modules/: FindBSF.cmake  FindMosquittopp.cmake  LibFindMacros.cmake
lib/bsf/include/bsf/: AbstractTransport.h  AsyncMqttTransport.h  Base64Serializer.h  JsonDataReading.h  ProtobufDataReading.h  ProtobufPtrDataReading.h  Sensor.h  SensorClient.h  Singleton.h  common.h
lib/bsf/include/bsf/detail/: AbstractTransport.h  AsyncMqttTransport.h
midiemitter/: CMakeLists.txt  midiemitter.cpp
midiemitter/include/: MidiMqttPlayer.h  MusicSensorClient.h
midiemitter/include/detail/: MusicSensorClient.h
midiemitter/src/: MidiMqttPlayer.cpp  midiemitter.cpp
midilistener/: CMakeLists.txt  midilistener.cpp
midilistener/include/: MidiMqttRetansmitter.h  MidiMqttRetransmitter.h  MidiSensor.h  MusicSensor.h
midilistener/include/detail/: MusicSensor.h
midilistener/src/: MidiMqttRetransmitter.cpp  midilistener.cpp
